[package]
name = "transforms"
version = "0.1.12"
edition = "2021"
description = "A transform library to track reference frames and provide transforms between them."
license = "MIT"
repository = "https://github.com/dHofmeister/transforms"

[features]
async = ["dep:tokio"]

[dependencies]
log = "0"
thiserror = "1"
approx = "0"
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
env_logger = "0"
tokio = { version = "1", features = ["full"] }
