[package]
name = "transforms"
version = "0.2.0"
edition = "2021"
description = "A transform library to track reference frames and provide transforms between them."
license = "MIT"
repository = "https://github.com/dHofmeister/transforms"

[features]
async = ["dep:tokio", "dep:tokio-test"]

[dependencies]
thiserror = "2"
approx = "0"
tokio = { version = "1", features = ["sync"], optional = true }
tokio-test = { version = "0", optional = true }

[dev-dependencies]
env_logger = "0"
tokio = { version = "1", features = ["full"] }
log = "0"
criterion = { version = "0", features = ["async_tokio"] }

[[example]]
name = "async_await"
path = "examples/async_await.rs"
required-features = ["async"]

[[example]]
name = "full_example"
path = "examples/full_example.rs"
required-features = ["async"]

[[bench]]
name = "registry_benchmarks"
harness = false
